Gestion des cartes CHF  ( https://app.clickup.com/t/3qm1tf6 )

--- a/XpertTools.Module/XpertTools.Module.csproj
+++ b/XpertTools.Module/XpertTools.Module.csproj
@@ -32,4 +32,21 @@
     <PackageReference Include="DevExpress.Persistent.Base" Version="22.1.3" />
     <PackageReference Include="DevExpress.Persistent.BaseImpl.Xpo" Version="22.1.3" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="UnusableNodes.xml">
+      <DependentUpon>Model.DesignedDiffs.xafml</DependentUpon>
+    </None>
+    <None Update="UnusableNodes1.xml">
+      <DependentUpon>Model.DesignedDiffs.xafml</DependentUpon>
+    </None>
+    <None Update="UnusableNodes2.xml">
+      <DependentUpon>Model.DesignedDiffs.xafml</DependentUpon>
+    </None>
+    <None Update="UnusableNodes3.xml">
+      <DependentUpon>Model.DesignedDiffs.xafml</DependentUpon>
+    </None>
+    <None Update="UnusableNodes4.xml">
+      <DependentUpon>Model.DesignedDiffs.xafml</DependentUpon>
+    </None>
+  </ItemGroup>
 </Project>
