--- a/XpertTools.Blazor.Server/appsettings.json
+++ b/XpertTools.Blazor.Server/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "ConnectionString": "Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\\SQLXPERT2019;Initial Catalog=XpertTools",
+    "ConnectionString": "Integrated Security=SSPI;Pooling=false;Data Source=Xpert_X\\SQLXPERT2019;Initial Catalog=XpertTools",
     "EasyTestConnectionString": "Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\\mssqllocaldb;Initial Catalog=XpertToolsEasyTest"
   },
   "Logging": {
@@ -14,7 +14,7 @@
   "AllowedHosts": "*",
   "DevExpress": {
     "ExpressApp": {
-      "Languages": "en;",
+      "Languages": "fr;",
       "ShowLanguageSwitcher": false,
       "ThemeSwitcher": {
         "DefaultItemName": "Office White",
