--- a/XpertTools.Blazor.Server/appsettings.json
+++ b/XpertTools.Blazor.Server/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "ConnectionString": "Integrated Security=SSPI;Pooling=false;Data Source=Xpert_X\\SQLXPERT2019;Initial Catalog=XpertTools",
+    "ConnectionString": "Integrated Security=SSPI;Pooling=false;Data Source=Xpert_X\\SQLXPERT2019;Initial Catalog=XpertTools1",
     "EasyTestConnectionString": "Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\\mssqllocaldb;Initial Catalog=XpertToolsEasyTest"
   },
   "Logging": {
