--- a/XpertTools.Module/XpertTools.Module.csproj
+++ b/XpertTools.Module/XpertTools.Module.csproj
@@ -14,6 +14,7 @@
     <EmbeddedResource Include="Model.DesignedDiffs.xafml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="DevExpress.ExpressApp" Version="22.1.3" />
     <PackageReference Include="DevExpress.ExpressApp.AuditTrail.Xpo" Version="22.1.3" />
     <PackageReference Include="DevExpress.ExpressApp.Chart" Version="22.1.3" />
